--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             currentIndex++;
             showQuestion();
         } else {
-            document.getElementById('card').innerText = "¡Has completado todas las preguntas!";
+            document.getElementById('card').innerText = "¡Has completado todas las preguntas! FELICIDADES";
             document.getElementById('show-answer-btn').style.display = 'none';
             document.getElementById('next-btn').style.display = 'none';
             document.getElementById('answer').innerText = "";
